fixed left margin when sidebar is visible

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -199,7 +199,8 @@ a:hover {
   margin-left: 20px;
 }
 
-.dashboard-main {
+.dashboard-main,
+.trash-main {
   margin-top: 150px;
 }
 
